--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
               <span class="timeframe">month</span>
             </p>
           </div>
+          <label for="price-selector" class="sr-only"
+            >Select a Price Plan</label
+          >
           <input id="price-selector" type="range" min="0" max="4" value="2" />
           <div class="billing-plan-box">
             <p class="billing-text">Monthly Billing</p>
